fixed star rating out of place

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,23 +5,20 @@ color: white;
 }
 
 input[type="radio"] {
-  left : -10000px;
-  position: absolute;
-  top : -10000px;
   visibility: hidden;
 }
 
 .rating {
-    float: left;
+    
     height: 46px;
-    padding: 0 10px;
+    /* padding: 0 10px; */
   }
   .rating:not(:checked) > input {
     position:absolute;
     top:-9999px;
   }
   .rating:not(:checked) > label {
-    float:right;
+    float:left;
     width:1em;
     overflow:hidden;
     white-space:nowrap;
